--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -24,7 +24,7 @@
     />
 
     <!-- 
-      Copy the yarn.lock file to prevent this task from running over and over again. And ony rerun the check with yarn.lock changes. 
+      Copy the yarn.lock file to prevent this task from running over and over again, and only rerun the check with yarn.lock changes. 
       This will likely miss a few corner cases with local changes to package.json but should catch the most importance case after syncing
     -->
     <Copy
