--- a/packages/@react-native-windows/telemetry/package.json
+++ b/packages/@react-native-windows/telemetry/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-native-windows/telemetry",
-  "version": "0.63.0",
+  "version": "0.63.1",
   "license": "MIT",
   "main": "lib-commonjs/index.js",
   "typings": "lib-commonjs/index.d.ts",
@@ -26,12 +26,13 @@
     "@rnw-scripts/just-task": "0.0.2",
     "@rnw-scripts/ts-config": "0.1.0",
     "@types/jest": "^24.9.1",
+    "@types/node": "^13.7.4",
     "@types/semver": "^7.3.1",
     "babel-jest": "^24.9.0",
     "eslint": "6.7.0",
     "jest": "^24.9.0",
     "just-scripts": "^0.36.1",
-    "prettier": "1.18.2",
+    "prettier": "1.19.1",
     "typescript": "^3.8.3"
   },
   "files": [
