--- a/vnext/PropertySheets/Autolink.targets
+++ b/vnext/PropertySheets/Autolink.targets
@@ -4,6 +4,15 @@
  Licensed under the MIT License.. 
 -->
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <!--
+    Visual Studio has its own incremental build logic on top of MSBuild's tha
+    will skip targets if it thinks inputs haven't changed. This falls over for
+    changes dependent on anything outside of our project. 
+  -->
+  <PropertyGroup>
+    <DisableFastUpToDateCheck>True</DisableFastUpToDateCheck>
+  </PropertyGroup>
+
   <Target Name="AutolinkCheck" BeforeTargets="PrepareForBuild" Condition="'$(RunAutolinkCheck)' == 'true'">
     <Exec Command="$(AutolinkCommand) $(AutolinkCommandArgs)" WorkingDirectory="$(AutolinkCommandWorkingDir)" CustomWarningRegularExpression="Warning: " CustomErrorRegularExpression="Error: " />
   </Target>
