--- a/vnext/PropertySheets/Autolink.targets
+++ b/vnext/PropertySheets/Autolink.targets
@@ -5,7 +5,7 @@
 -->
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <!--
-    Visual Studio has its own incremental build logic on top of MSBuild's tha
+    Visual Studio has its own incremental build logic on top of MSBuild's that
     will skip targets if it thinks inputs haven't changed. This falls over for
     changes dependent on anything outside of our project. 
   -->
