Fixing CG issues with kind-of (#6376)
* Fixing CG issues with dot-prop, kind-of

Closes #6372
Closes #6373

* fix merge error

* merge fixes again

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "appium-tizen-driver": "1.1.1-stub.0",
     "eslint-plugin-react": "^7.14.1",
     "eslint-plugin-react-hooks": "4.0.7",
+    "kind-of": "6.0.3",
     "node-fetch": "2.6.1",
     "webdriver": "git+https://github.com/react-native-windows/webdriver.git",
     "webdriverio": "5.12.1",
