Update to net 5.8.0 as earlier versions have compatiblity bugs with VS 16.8 and later

--- a/.ado/templates/prepare-env.yml
+++ b/.ado/templates/prepare-env.yml
@@ -23,9 +23,10 @@ steps:
       script: |
         Get-WmiObject Win32_LogicalDisk
 
+  # The commit tag in the nuspec requires that we use at least nuget 5.8 (because things break with nuget versions before and Vs 16.8 or later)
   - task: NuGetToolInstaller@0
     inputs:
-      versionSpec: ">=4.6.0"
+      versionSpec: ">=5.8.0"
 
   - template: yarn-install.yml
 
