--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -199,10 +199,10 @@ jobs:
 
       - template: templates/apply-published-version-vars.yml
 
-      # The commit tag in the nuspec requires that we use at least nuget 4.6
+      # The commit tag in the nuspec requires that we use at least nuget 5.8 (because things break with nuget versions before and Vs 16.8 or later)
       - task: NuGetToolInstaller@0
         inputs:
-          versionSpec: ">=4.6.0"
+          versionSpec: ">=5.8.0"
 
       - template: templates/prep-and-pack-nuget.yml
         parameters:
