--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -620,10 +620,10 @@ jobs:
       - checkout: self
         fetchDepth: 15
 
-      # The commit tag in the nuspec requires that we use at least nuget 4.6
+      # The commit tag in the nuspec requires that we use at least nuget 5.8 (because things break with nuget versions before and Vs 16.8 or later)
       - task: NuGetToolInstaller@0
         inputs:
-          versionSpec: ">=4.6.0"
+          versionSpec: ">=5.8.0"
 
       - template: templates/prep-and-pack-nuget.yml
         parameters:
