Recurse submodules FOR DESKTOP PR

--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -144,7 +144,7 @@ jobs:
             Microsoft.ReactNative\**
             Microsoft.ReactNative.Managed\**
             Microsoft.ReactNative.Managed.CodeGen\**
-      
+
       - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
         displayName: 'Component Governance Detection'
         inputs:
@@ -415,7 +415,7 @@ jobs:
     steps:
       - checkout: self
         clean: false
-        submodules: false
+        submodules: true
 
       - template: templates/build-rnw.yml
         parameters:
