--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -72,7 +72,7 @@ steps:
     inputs:
       versionSpec: ">=5.8.0"
 
-  - ${{ if (eq(parameters.useNuGet, true)}}:
+  - ${{ if eq(parameters.useNuGet, true)}}:
     - template: prep-and-pack-nuget.yml
       parameters:
         npmVersion: $(npmVersion)
