Pack Win32 NuGet Package in PR (#6542)
* Pack Win32 NuGet Package in PR

This was removed when inlining NuGet packing for MSRN into init tests. It was thought at the time the loss of coverage would be low enough not to cause issues, but we've been seeing issues pop up nonetheless.

Wer add a job which on desktop PR completion, reads artifacts and pumps out a desktop specific NuGet package. This adds some time to the desktop critical path, but this will be mitigated by removal of integration tests in the future. We also remove some desktop slices, after asks to reduce flavors. We don't do the NuGet packing inline with desktop PRs because it requires a little bit more PR work, and we should be able to take a bit less PR time by doing the packing in a single job. Unline experimental NuGet tests, we don't need to bind to npm version which is inconsitent per-job, which lets us have it be fully independent like before.

* Fix whitespace

* Fix template path

* Propagate desktop slice stripping

* Ensure Desktop still publishes debug builds

* Only patch Microsoft.ReactNative.VersionCheck.targets when packing an MSRN package

* Revert condition change

* Fix typo

* Consistent whitespace

* Weird boolean coercion?

--- a/.ado/templates/prep-and-pack-nuget.yml
+++ b/.ado/templates/prep-and-pack-nuget.yml
@@ -5,7 +5,7 @@ parameters:
   nugetroot: $(System.DefaultWorkingDirectory)\ReactWindows
   desktopId: 'OfficeReact.Win32'
   microsoftRNId: 'Microsoft.ReactNative'
-  slices: '("x64.Release","x86.Release", "ARM.Release", "ARM64.Release")'
+  slices: ''
   packDesktop: true
   packMicrosoftReactNative: true
   packMicrosoftReactNativeCxx: true
@@ -20,16 +20,17 @@ steps:
       artifact: ReactWindows
       path: $(System.DefaultWorkingDirectory)/ReactWindows
 
-  - powershell: |
-      (Get-Content -Path $(System.DefaultWorkingDirectory)\ReactWindows\Microsoft.ReactNative.VersionCheck.targets) -replace '\$\$nuGetPackageVersion\$\$', '${{parameters.npmVersion}}' | Set-Content -Path  $(System.DefaultWorkingDirectory)\ReactWindows\Microsoft.ReactNative.VersionCheck.targets
-    displayName: Patch version check file with version ${{parameters.npmVersion}}
+  - ${{ if or(eq(parameters.packMicrosoftReactNative, true), eq(parameters.packMicrosoftReactNativeCxx, true), eq(parameters.packMicrosoftReactNativeManaged, true), eq(parameters.packMicrosoftReactNativeManagedCodeGen, true)) }}:
+    - powershell: |
+        (Get-Content -Path $(System.DefaultWorkingDirectory)\ReactWindows\Microsoft.ReactNative.VersionCheck.targets) -replace '\$\$nuGetPackageVersion\$\$', '${{parameters.npmVersion}}' | Set-Content -Path  $(System.DefaultWorkingDirectory)\ReactWindows\Microsoft.ReactNative.VersionCheck.targets
+      displayName: Patch version check file with version ${{parameters.npmVersion}}
 
   - ${{ if eq(parameters.packDesktop, true) }}:
     - template: prep-and-pack-single.yml
       parameters:
         packageId: ${{parameters.desktopId}}
         packageVersion: ${{parameters.npmVersion}}
-        slices: ''
+        slices: ${{ coalesce(parameters.slices, '("x64.Debug", "x86.Debug", "ARM64.Debug", "x64.Release","x86.Release", "ARM64.Release")') }}
         buildProperties: 'CommitId=${{parameters.publishCommitId}};nugetroot=${{parameters.nugetroot}}'
 
   - ${{ if eq(parameters.packMicrosoftReactNative, true) }}:
@@ -37,7 +38,7 @@ steps:
       parameters:
         packageId: Microsoft.ReactNative
         packageVersion: ${{parameters.npmVersion}}
-        slices:  ${{ parameters.slices }}
+        slices: ${{ coalesce(parameters.slices, '("x64.Release","x86.Release", "ARM.Release", "ARM64.Release")') }}
         buildProperties: CommitId=${{parameters.publishCommitId}};nugetroot=${{parameters.nugetroot}};baseconfiguration=Release;baseplatform=x64
         codesignBinaries: ${{ parameters.signMicrosoft }}
         codesignNuget: ${{ parameters.signMicrosoft }}
@@ -66,7 +67,7 @@ steps:
       parameters:
         packageId: Microsoft.ReactNative.Managed
         packageVersion: ${{parameters.npmVersion}}
-        slices:  ${{ parameters.slices }}
+        slices: ${{ coalesce(parameters.slices, '("x64.Release","x86.Release", "ARM.Release", "ARM64.Release")') }}
         buildProperties: CommitId=${{parameters.publishCommitId}};nugetroot=${{parameters.nugetroot}};baseconfiguration=Release;baseplatform=x64
         codesignBinaries: ${{ parameters.signMicrosoft }}
         codesignNuget: ${{ parameters.signMicrosoft }}
