Layout-Headers During NuGet Pack
PR and publish are set up to expect that some NuGet processing work is done before uploading artifacts. It is expected a single job does this work, and uploads for all NuGet consumers. If multiple jobs due this work, we would potentially see conflicting artifacts.

This work also uploads build scripts as an artifact, leading to a race condition where the Desktop Packing job might fail if Desktop finishes before the designated job to upload header artifacts.

These headers can now be fully derived from source in the repo, so we can remove some of this fragility and group the work with NuGet packing.

--- a/.ado/templates/prep-and-pack-nuget.yml
+++ b/.ado/templates/prep-and-pack-nuget.yml
@@ -20,6 +20,12 @@ steps:
       artifact: ReactWindows
       path: $(System.DefaultWorkingDirectory)/ReactWindows
 
+  - powershell: PowerShell@2
+    displayName: Layout NuGet header files
+    inputs:
+      filePath: vnext/Scripts/Tfs/Layout-Headers.ps1
+      arguments: -TargetRoot $(System.DefaultWorkingDirectory)/ReactWindows
+
   - ${{ if or(eq(parameters.packMicrosoftReactNative, true), eq(parameters.packMicrosoftReactNativeCxx, true), eq(parameters.packMicrosoftReactNativeManaged, true), eq(parameters.packMicrosoftReactNativeManagedCodeGen, true)) }}:
     - powershell: |
         (Get-Content -Path $(System.DefaultWorkingDirectory)\ReactWindows\Microsoft.ReactNative.VersionCheck.targets) -replace '\$\$nuGetPackageVersion\$\$', '${{parameters.npmVersion}}' | Set-Content -Path  $(System.DefaultWorkingDirectory)\ReactWindows\Microsoft.ReactNative.VersionCheck.targets
