--- a/vnext/ReactWindowsCore/packages.ReactWindowsCore-Desktop.config
+++ b/vnext/ReactWindowsCore/packages.ReactWindowsCore-Desktop.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="boost" version="1.68.0.0" targetFramework="native" />
+  <package id="Microsoft.Windows.CppWinRT" version="2.0.200316.3" targetFramework="native" />
   <package id="ReactNative.Hermes.Windows" version="0.5.0-f56606a8" targetFramework="native" Condition="$(USE_HERMES)' == 'true'" />
   <package id="ReactNative.V8Jsi.Windows" version="0.63.1" targetFramework="native" Condition="'$(USE_V8)' == 'true'" />
 </packages>
